# MotionShot

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  foregroundSeg_baidu.cpp  grabcut.cpp  readAndSave.cpp
include/MotionShot/: BaseBackgroundSubtractor.h  MotionTracker.h  precompiled.h  utility.h
scripts/: bs_example.py
src/: BaseBackgroundSubtractor.cpp  CMakeLists.txt  GMM.cpp  MotionShot.cpp  MotionTracker.cpp  main.cpp  utility.cpp
src/BGDifference/: BGDifference.h  CMakeLists.txt
src/BackgroundExtractor/: BS_MOG2_CV.h  CMakeLists.txt  GMM.cpp  main.cpp
src/FramesDifference/: CMakeLists.txt  FramesDifference.cpp  FramesDifference.h  main.cpp
src/ImageBlender/: CMakeLists.txt  PoissionBlender.cpp  PoissionBlender.h  PoissonBlender.cpp  PoissonBlender.h  cvBlenders.cpp  cvBlenders.h  cvSeamlessCloning.cpp  cvSeamlessCloning.h  cvSeamlessCloning_func.hpp
src/ImageStitcher/: ImageStitcher.cpp  ImageStitcher.h
src/ImageStitching/: CMakeLists.txt
src/MotionDetector/: BGDifference.cpp  BGDifference.h  BS_MOG2_CV.cpp  BS_MOG2_CV.h  BaseMotionDetector.cpp  BaseMotionDetector.h  CMakeLists.txt  FramesDifference.cpp  FramesDifference.h  OpticalFlower.cpp  OpticalFlower.h  ViBePlus.cpp  ViBePlus.h  Vibe.cpp  Vibe.h
src/MotionShoter/: CMakeLists.txt  MotionShoter.cpp  MotionShoter.h  utility.cpp  utility.h
src/MotionTracker/: CMakeLists.txt  MotionTracker.cpp  MotionTracker.h  MovingObject.cpp  MovingObject.h
src/ViBe/: CMakeLists.txt  Vibe.h
src/ViBe+/: CMakeLists.txt  ViBePlus.cpp  ViBePlus.h  main.cpp
test/: CMakeLists.txt  test_aip_bodyseg.cpp  test_blender.cpp  test_detector.cpp  test_detector_DenseFlow_cv.cpp  test_detector_acc_mog.cpp  test_detector_bgd.cpp  test_detector_cv.cpp  test_detector_cvFlow.cpp  test_detector_denseFlow.cpp  test_detector_sparseFlow.cpp  test_detector_vibe.cpp  test_overlappedAreaBlending.cpp  test_shoter.cpp  test_shoter_full.cpp  test_shoter_huawei_static.cpp  test_shoter_lasiesta.cpp  test_shoter_simple.cpp  test_shoter_static.cpp  test_shoter_static_huawei.cpp  test_shoter_static_lasiesta.cpp  test_stitcher.cpp  test_stitcher_detail.cpp  test_tracker.cpp
